:bug: spacing articles

--- a/src/css/page.css
+++ b/src/css/page.css
@@ -44,14 +44,9 @@ main li {
     max-width: none;
   }
 
-  main article:nth-of-type(2) {
+  main article:nth-of-type(2), main article:nth-of-type(3) {
     width: 45%;
     margin-top: 2em;
-  }
-
-  main article:nth-of-type(3) {
-    width: 45%;
-    margin-top: 6em;
   }
 
   main article:nth-of-type(4) {
